2017-02-06  Jérôme Pasquier  <rainbru@free.fr>
	* src/client/ModalDialog.cpp (exec): move show() before starting
	the endless loop.

2017-01-31  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/ModalDialog.cpp (exec): calling CEGUI's context function
	clearGeometry(CEGUI::RQ_OVERLAY) to make geometry buffers drawn again.
	* src/client/ModalDialog.cpp (exec): add Ogre::Root parameter to
	eb able to call renderOneFrame().

2017-01-26  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (reconfigure): now using ModalDialog.
	* src/client/ModalDialog.hpp (ModalDialog): first implementation.

2017-01-24  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/LoadingBar.cpp: remove unneeded class.

2017-01-17  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (getNextResolution): uses
	ResolutionHandler to get actual screen size.
	* src/client/GameEngine.cpp (getPreviousResolution): uses
	ResolutionHandler to get actual screen size.
	* src/client/ResolutionHandler.hpp: fix multiple inclusion guard name.

	* src/logger/Logger.cpp: document some members.
	* src/logger/LoggerOutputFile.cpp: update doxygen documentation.

2017-01-14  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/: change headers dates for 2017 for all sources.

2017-01-13  Jérôme Pasquier  <rainbru@free.fr>

	* src/logger/: change headers dates for 2017 for all sources.
	* src/services/: change headers dates for 2017 for all sources.

2017-01-09  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/ResolutionHandler.cpp (probe): now return a temporary
	string from resultToString.

	* src/client/ResolutionHandler.cpp (resultToString): int result to
	string.

	* src/client/ResolutionHandler.cpp (probe): use RainbrurpgException
	to thrown error.

2016-12-28  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/ResolutionHandler.cpp (probeFromInts): remove unneeded
	function.

	* src/client/ResolutionHandler.cpp (probeFromWindow): implement a first
	version.