@@ -1,4 +1,13 @@
 2017-02-06  Jérôme Pasquier  <rainbru@free.fr>
+
+	* src/client/ModalDialog.cpp (exec): directly call GameEngine::
+	drawOverlays.
+	* src/client/GameEngine.hpp (overlayHandler): now call drawOverlays().
+	* src/client/GameEngine.hpp (drawOverlays): new public method to be
+	called from ModalDialog.
+	* src/client/ModalDialog.cpp (exec): parameter is now a pointer to
+	GameEngine.
+
 	* src/client/ModalDialog.cpp (exec): move show() before starting
 	the endless loop.
 
